fixed pubs_all_to_yml for jeyhan

--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -192,7 +192,7 @@ papers:
     booktitle-full: "Proceedings of the 57th Conference of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/P19-1630/"
   - layout: paper
-    author: "Wei Zhang, Quan Sheng, Jey Lau, Ermyas Abebe and Wenjie Ruan"
+    author: "Wei Zhang, Quan Sheng, Jey Han Lau, Ermyas Abebe and Wenjie Ruan"
     title: "Duplicate Detection in Programming Question Answering Communities"
     year: "2018"
     paper-type: article
@@ -432,7 +432,7 @@ papers:
     booktitle-full: "Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing"
     docurl: "https://www.aclweb.org/anthology/D18-1310/"
   - layout: paper
-    author: "Shraey Bhatia, Jey Lau and Timothy Baldwin"
+    author: "Shraey Bhatia, Jey Han Lau and Timothy Baldwin"
     title: "Topic Intrusion for Automatic Topic Model Evaluation"
     year: "2018"
     paper-type: inproceedings
@@ -440,7 +440,7 @@ papers:
     booktitle-full: "Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing"
     docurl: "https://www.aclweb.org/anthology/D18-1098/"
   - layout: paper
-    author: "Khoi-Nguyen Tran, Jey Lau, Danish Contractor, Utkarsh Gupta, Bikram Sengupta, Christopher Butler and Mukesh Mohania"
+    author: "Khoi-Nguyen Tran, Jey Han Lau, Danish Contractor, Utkarsh Gupta, Bikram Sengupta, Christopher Butler and Mukesh Mohania"
     title: "Document Chunking and Learning Objective Generation for Instruction Design"
     year: "2018"
     paper-type: inproceedings
@@ -480,7 +480,7 @@ papers:
     booktitle-full: "American Medical Informatics Association Annual Symposium"
     docurl: "http://knowledge.amia.org/67852-amia-1.4259402/t005-1.4263615/t005-1.4263616/2973744-1.4263704/2952146-1.4263701"
   - layout: paper
-    author: "Steven Xu, Andrew Bennett, Doris Hoogeveen, Jey Lau and Timothy Baldwin"
+    author: "Steven Xu, Andrew Bennett, Doris Hoogeveen, Jey Han Lau and Timothy Baldwin"
     title: "Preferred Answer Selection in Stack Overflow: Better Text Representations ... and Metadata, Metadata, Metadata"
     year: "2018"
     paper-type: inproceedings
@@ -544,7 +544,7 @@ papers:
     booktitle-full: "Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/P18-1026/"
   - layout: paper
-    author: "Jean-Philippe Bernardy, Shalom Lappin and Jey Lau"
+    author: "Jean-Philippe Bernardy, Shalom Lappin and Jey Han Lau"
     title: "The Influence of Context on Sentence Acceptability Judgements"
     year: "2018"
     paper-type: inproceedings
@@ -560,7 +560,7 @@ papers:
     booktitle-full: "Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/P18-1187/"
   - layout: paper
-    author: "Jey Lau, Trevor Cohn, Timothy Baldwin, Julian Brooke and Adam Hammond"
+    author: "Jey Han Lau, Trevor Cohn, Timothy Baldwin, Julian Brooke and Adam Hammond"
     title: "Deep-speare: A joint neural model of poetic language, meter and rhyme"
     year: "2018"
     paper-type: inproceedings
@@ -624,7 +624,7 @@ papers:
     volume: 71
     docurl: "https://doi.org/10.1016/j.jbi.2017.06.015"
   - layout: paper
-    author: "Nikolaos Aletras, Timothy Baldwin, Jey Lau and Mark Stevenson"
+    author: "Nikolaos Aletras, Timothy Baldwin, Jey Han Lau and Mark Stevenson"
     title: "Evaluating topic representations for exploring document collections"
     year: "2017"
     paper-type: article
@@ -632,7 +632,7 @@ papers:
     volume: 68
     docurl: "https://doi.org/10.1002/asi.23574"
   - layout: paper
-    author: "Jey Lau, Alexander Clark and Shalom Lappin"
+    author: "Jey Han Lau, Alexander Clark and Shalom Lappin"
     title: "Grammaticality, Acceptability, and Probability: A Probabilistic View of Linguistic Knowledge"
     year: "2017"
     paper-type: article
@@ -680,7 +680,7 @@ papers:
     volume: 2017
     docurl: "https://doi.org/10.1093/database/bax062"
   - layout: paper
-    author: "Wei Zhang, Quan Sheng, Jey Lau and Ermyas Abebe"
+    author: "Wei Zhang, Quan Sheng, Jey Han Lau and Ermyas Abebe"
     title: "Detecting Duplicate Posts in Programming QA Communities via Latent Semantics and Association Rules"
     year: "2017"
     paper-type: inproceedings
@@ -752,7 +752,7 @@ papers:
     booktitle-full: "Proceedings of the Eighth International Joint Conference on Natural Language Processing"
     docurl: "https://www.aclweb.org/anthology/I17-1056/"
   - layout: paper
-    author: "Jey Lau, Lianhua Chi, Khoi-Nguyen Tran and Trevor Cohn"
+    author: "Jey Han Lau, Lianhua Chi, Khoi-Nguyen Tran and Trevor Cohn"
     title: "End-to-end Network for Twitter Geolocation Prediction and Hashing"
     year: "2017"
     paper-type: inproceedings
@@ -896,7 +896,7 @@ papers:
     booktitle-full: "Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/E17-2057/"
   - layout: paper
-    author: "Timothy Baldwin, Jey Lau, Nikolaos Aletras and Ionut Sorodoc"
+    author: "Timothy Baldwin, Jey Han Lau, Nikolaos Aletras and Ionut Sorodoc"
     title: "Multimodal Topic Labelling"
     year: "2017"
     paper-type: inproceedings
@@ -920,7 +920,7 @@ papers:
     booktitle-full: "Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/E17-2004/"
   - layout: paper
-    author: "Shraey Bhatia, Jey Lau and Timothy Baldwin"
+    author: "Shraey Bhatia, Jey Han Lau and Timothy Baldwin"
     title: "An Automatic Approach for Document-level Topic Model Evaluation"
     year: "2017"
     paper-type: inproceedings
@@ -968,7 +968,7 @@ papers:
     booktitle-full: "Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics"
     docurl: "https://doi.org/10.18653/v1/P17-2033"
   - layout: paper
-    author: "Jey Lau, Timothy Baldwin and Trevor Cohn"
+    author: "Jey Han Lau, Timothy Baldwin and Trevor Cohn"
     title: "Topically Driven Neural Language Model"
     year: "2017"
     paper-type: inproceedings
@@ -984,7 +984,7 @@ papers:
     booktitle-full: "Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics"
     docurl: "https://doi.org/10.18653/v1/P17-2093"
   - layout: paper
-    author: "Ying Xu, Jey Lau, Timothy Baldwin and Trevor Cohn"
+    author: "Ying Xu, Jey Han Lau, Timothy Baldwin and Trevor Cohn"
     title: "Decoupling Encoder and Decoder Networks for Abstractive Document Summarization"
     year: "2017"
     paper-type: inproceedings
@@ -1224,7 +1224,7 @@ papers:
     booktitle-full: "Proceedings of the 2016 SIAM International Conference on Data Mining"
     docurl: "https://doi.org/10.1137/1.9781611974348.48"
   - layout: paper
-    author: "Jey Lau and Timothy Baldwin"
+    author: "Jey Han Lau and Timothy Baldwin"
     title: "An Empirical Evaluation of doc2vec with Practical Insights into Document Embedding Generation"
     year: "2016"
     paper-type: inproceedings
@@ -1256,7 +1256,7 @@ papers:
     booktitle-full: "Proceedings of the 28th Australian Conference on Computer-Human Interaction"
     docurl: "https://doi.org/10.1145/3010915.3011843"
   - layout: paper
-    author: "Jey Lau and Timothy Baldwin"
+    author: "Jey Han Lau and Timothy Baldwin"
     title: "The Sensitivity of Topic Coherence Evaluation to Topic Cardinality"
     year: "2016"
     paper-type: inproceedings
@@ -1416,7 +1416,7 @@ papers:
     booktitle-full: "26th International Conference on Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/C16-1294/"
   - layout: paper
-    author: "Shraey Bhatia, Jey Lau and Timothy Baldwin"
+    author: "Shraey Bhatia, Jey Han Lau and Timothy Baldwin"
     title: "Automatic Labelling of Topics with Neural Embeddings"
     year: "2016"
     paper-type: inproceedings
@@ -1480,7 +1480,7 @@ papers:
     booktitle-full: "Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/P16-2056/"
   - layout: paper
-    author: "Andrew Bennett, Timothy Baldwin, Jey Lau, Diana McCarthy and Francis Bond"
+    author: "Andrew Bennett, Timothy Baldwin, Jey Han Lau, Diana McCarthy and Francis Bond"
     title: "LexSemTm: A Semantic Dataset Based on All-words Unsupervised Sense Distribution Learning"
     year: "2016"
     paper-type: inproceedings
@@ -1768,7 +1768,7 @@ papers:
     booktitle-full: "Proceedings of the ACM Ninth International Workshop on Data and Text Mining in Biomedical Informatics"
     docurl: "https://doi.org/10.1145/2811163.2811175"
   - layout: paper
-    author: "Nikolaos Aletras, Jey Lau, Timothy Baldwin and Mark Stevenson"
+    author: "Nikolaos Aletras, Jey Han Lau, Timothy Baldwin and Mark Stevenson"
     title: "TM 2015 - Topic Models: Post-Processing and Applications Workshop"
     year: "2015"
     paper-type: inproceedings
@@ -1824,7 +1824,7 @@ papers:
     booktitle-full: "Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing of the Asian Federation of Natural Language Processing"
     docurl: "https://www.aclweb.org/anthology/P15-2085/"
   - layout: paper
-    author: "Jey Lau, Alexander Clark and Shalom Lappin"
+    author: "Jey Han Lau, Alexander Clark and Shalom Lappin"
     title: "Unsupervised Prediction of Acceptability Judgements"
     year: "2015"
     paper-type: inproceedings
@@ -1880,7 +1880,7 @@ papers:
     booktitle-full: "Proceedings of the Twenty-Ninth AAAI Conference on Artificial Intelligence"
     docurl: "http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9814"
   - layout: paper
-    author: "Marco Lui, Jey Lau and Timothy Baldwin"
+    author: "Marco Lui, Jey Han Lau and Timothy Baldwin"
     title: "Automatic Detection and Language Identification of Multilingual Documents"
     year: "2014"
     paper-type: article
@@ -2008,7 +2008,7 @@ papers:
     booktitle-full: "Proceedings of the 4th International Workshop on Location and the Web"
     docurl: "https://doi.org/10.1145/2663713.2664426"
   - layout: paper
-    author: "Nikolaos Aletras, Timothy Baldwin, Jey Lau and Mark Stevenson"
+    author: "Nikolaos Aletras, Timothy Baldwin, Jey Han Lau and Mark Stevenson"
     title: "Representing topics labels for exploring digital libraries"
     year: "2014"
     paper-type: inproceedings
@@ -2096,7 +2096,7 @@ papers:
     booktitle-full: "Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/E14-1050/"
   - layout: paper
-    author: "Jey Lau, David Newman and Timothy Baldwin"
+    author: "Jey Han Lau, David Newman and Timothy Baldwin"
     title: "Machine Reading Tea Leaves: Automatically Evaluating Topic Coherence and Topic Model Quality"
     year: "2014"
     paper-type: inproceedings
@@ -2160,7 +2160,7 @@ papers:
     booktitle-full: "Proceedings of the Workshop on Open Infrastructures and Analysis Frameworks for HLT"
     docurl: "https://doi.org/10.3115/v1/W14-5202"
   - layout: paper
-    author: "Paul Cook, Jey Lau, Diana McCarthy and Timothy Baldwin"
+    author: "Paul Cook, Jey Han Lau, Diana McCarthy and Timothy Baldwin"
     title: "Novel Word-sense Identification"
     year: "2014"
     paper-type: inproceedings
@@ -2168,7 +2168,7 @@ papers:
     booktitle-full: "25th International Conference on Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/C14-1154/"
   - layout: paper
-    author: "Jey Lau, Alexander Clark and Shalom Lappin"
+    author: "Jey Han Lau, Alexander Clark and Shalom Lappin"
     title: "Measuring Gradience in Speakers&apos; Grammaticality Judgements"
     year: "2014"
     paper-type: inproceedings
@@ -2176,7 +2176,7 @@ papers:
     booktitle-full: "Proceedings of the 36th Annual Meeting of the Cognitive Science Society"
     docurl: "https://mindmodeling.org/cogsci2014/papers/149/"
   - layout: paper
-    author: "Jey Lau, Paul Cook, Diana McCarthy, Spandana Gella and Timothy Baldwin"
+    author: "Jey Han Lau, Paul Cook, Diana McCarthy, Spandana Gella and Timothy Baldwin"
     title: "Learning Word Sense Distributions, Detecting Unattested Senses and Identifying Novel Senses Using Topic Models"
     year: "2014"
     paper-type: inproceedings
@@ -2256,7 +2256,7 @@ papers:
     booktitle-full: "Proceedings of the 2014 ACM Southeast Regional Conference"
     docurl: "https://doi.org/10.1145/2638404.2638521"
   - layout: paper
-    author: "Jey Lau, Timothy Baldwin and David Newman"
+    author: "Jey Han Lau, Timothy Baldwin and David Newman"
     title: "On collocations and topic models"
     year: "2013"
     paper-type: article
@@ -2384,7 +2384,7 @@ papers:
     booktitle-full: "Proceedings of the Tweet Normalization Workshop co-located with 29th Conference of the Spanish Society for Natural Language Processing (SEPLN 2013)"
     docurl: "http://ceur-ws.org/Vol-1086/paper06.pdf"
   - layout: paper
-    author: "Jey Lau, Paul Cook and Timothy Baldwin"
+    author: "Jey Han Lau, Paul Cook and Timothy Baldwin"
     title: "unimelb: Topic Modelling-based Word Sense Induction"
     year: "2013"
     paper-type: inproceedings
@@ -2392,7 +2392,7 @@ papers:
     booktitle-full: "Proceedings of the 7th International Workshop on Semantic Evaluation"
     docurl: "https://www.aclweb.org/anthology/S13-2051/"
   - layout: paper
-    author: "Jey Lau, Paul Cook and Timothy Baldwin"
+    author: "Jey Han Lau, Paul Cook and Timothy Baldwin"
     title: "unimelb: Topic Modelling-based Word Sense Induction for Web Snippet Clustering"
     year: "2013"
     paper-type: inproceedings
@@ -2416,7 +2416,7 @@ papers:
     booktitle-full: "Biocomputing 2013: Proceedings of the Pacific Symposium"
     docurl: "http://psb.stanford.edu/psb-online/proceedings/psb13/verspoor.pdf"
   - layout: paper
-    author: "Meladel Mistica, Jey Lau and Timothy Baldwin"
+    author: "Meladel Mistica, Jey Han Lau and Timothy Baldwin"
     title: "Unsupervised Word Class Induction for Under-resourced Languages: A Case Study on Indonesian"
     year: "2013"
     paper-type: inproceedings
@@ -2744,7 +2744,7 @@ papers:
     booktitle-full: "ECAI 2012 - 20th European Conference on Artificial Intelligence. Including Prestigious Applications of Artificial Intelligence (PAIS-2012) System Demonstrations Track"
     docurl: "https://doi.org/10.3233/978-1-61499-098-7-139"
   - layout: paper
-    author: "Jey Lau, Paul Cook, Diana McCarthy, David Newman and Timothy Baldwin"
+    author: "Jey Han Lau, Paul Cook, Diana McCarthy, David Newman and Timothy Baldwin"
     title: "Word Sense Induction for Novel Sense Detection"
     year: "2012"
     paper-type: inproceedings
@@ -2768,7 +2768,7 @@ papers:
     booktitle-full: "24th International Conference on Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/C12-1167/"
   - layout: paper
-    author: "David Newman, Nagendra Koilada, Jey Lau and Timothy Baldwin"
+    author: "David Newman, Nagendra Koilada, Jey Han Lau and Timothy Baldwin"
     title: "Bayesian Text Segmentation for Index Term Identification and Keyphrase Extraction"
     year: "2012"
     paper-type: inproceedings
@@ -2776,7 +2776,7 @@ papers:
     booktitle-full: "24th International Conference on Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/C12-1127/"
   - layout: paper
-    author: "Jey Lau, Nigel Collier and Timothy Baldwin"
+    author: "Jey Han Lau, Nigel Collier and Timothy Baldwin"
     title: "On-line Trend Analysis with Topic Models: textbackslash#twitter Trends Detection Topic Model Online"
     year: "2012"
     paper-type: inproceedings
@@ -3048,7 +3048,7 @@ papers:
     booktitle-full: "The 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies"
     docurl: "https://www.aclweb.org/anthology/P11-2046/"
   - layout: paper
-    author: "Jey Lau, Karl Grieser, David Newman and Timothy Baldwin"
+    author: "Jey Han Lau, Karl Grieser, David Newman and Timothy Baldwin"
     title: "Automatic Labelling of Topic Models"
     year: "2011"
     paper-type: inproceedings
@@ -3176,7 +3176,7 @@ papers:
     booktitle-full: "Human Language Technologies: Conference of the North American Chapter of the Association of Computational Linguistics"
     docurl: "https://www.aclweb.org/anthology/N10-1002/"
   - layout: paper
-    author: "David Newman, Jey Lau, Karl Grieser and Timothy Baldwin"
+    author: "David Newman, Jey Han Lau, Karl Grieser and Timothy Baldwin"
     title: "Automatic Evaluation of Topic Coherence"
     year: "2010"
     paper-type: inproceedings
@@ -3264,7 +3264,7 @@ papers:
     booktitle-full: "Proceedings of the Fourteenth Conference on Computational Natural Language Learning"
     docurl: "https://www.aclweb.org/anthology/W10-2923/"
   - layout: paper
-    author: "Jey Lau, David Newman, Sarvnaz Karimi and Timothy Baldwin"
+    author: "Jey Han Lau, David Newman, Sarvnaz Karimi and Timothy Baldwin"
     title: "Best Topic Word Selection for Topic Labelling"
     year: "2010"
     paper-type: inproceedings
